[gd_scene load_steps=22 format=3 uid="uid://d212jkx14sapd"]

[ext_resource type="Script" path="res://scenes/world/ship/ship.gd" id="1_lvdat"]
[ext_resource type="PackedScene" uid="uid://cm7u838u14knh" path="res://scenes/world/ship/sprite/ship_sprite.tscn" id="2_casu2"]
[ext_resource type="PackedScene" uid="uid://p73xe0fbsd8v" path="res://scenes/world/ship/cannons/cannons.tscn" id="4_dkwe4"]
[ext_resource type="AudioStream" uid="uid://xxrrcux74pt4" path="res://scenes/world/ship/ship_damage_sound/ship_damage.wav" id="4_mi6ka"]
[ext_resource type="Texture2D" uid="uid://c6lslv6mc0oy3" path="res://scenes/world/ship/ship_wake_particle.png" id="11_yy8k2"]
[ext_resource type="Texture2D" uid="uid://cfdfpuivgxput" path="res://scenes/world/ship/smoke_particle.png" id="12_vokgj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3u3v2"]
bg_color = Color(0, 0, 0, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5848p"]
bg_color = Color(0.945098, 0.219608, 0.196078, 1)

[sub_resource type="Gradient" id="Gradient_ncuge"]
colors = PackedColorArray(1, 1, 1, 0.501961, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ca4hg"]
gradient = SubResource("Gradient_ncuge")

[sub_resource type="Curve" id="Curve_b4n0l"]
_data = [Vector2(0, 0.527273), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_gdn5k"]
curve = SubResource("Curve_b4n0l")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ae3ss"]
particle_flag_disable_z = true
spread = 0.0
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 2.0
scale_max = 2.0
scale_curve = SubResource("CurveTexture_gdn5k")
color_ramp = SubResource("GradientTexture1D_ca4hg")

[sub_resource type="Gradient" id="Gradient_j4sih"]
offsets = PackedFloat32Array(0.2, 1)
colors = PackedColorArray(0.133333, 0.133333, 0.133333, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_hcoe6"]
gradient = SubResource("Gradient_j4sih")

[sub_resource type="Curve" id="Curve_wcvbx"]
_data = [Vector2(0, 0.0363636), 0.0, 3.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_1g5gc"]
curve = SubResource("Curve_wcvbx")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8xlol"]
emission_shape = 3
emission_box_extents = Vector3(35, 4, 0)
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_max = 10.0
angular_velocity_min = -10.0
angular_velocity_max = 10.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_min = 1.0
damping_max = 1.0
angle_max = 360.0
scale_curve = SubResource("CurveTexture_1g5gc")
color_ramp = SubResource("GradientTexture1D_hcoe6")

[sub_resource type="Gradient" id="Gradient_5ptjf"]
offsets = PackedFloat32Array(0.1, 0.2, 0.4, 1)
colors = PackedColorArray(1, 0.533333, 0, 1, 0.133333, 0.133333, 0.133333, 1, 0.133333, 0.133333, 0.133333, 1, 0.133333, 0.133333, 0.133333, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_aeyvo"]
gradient = SubResource("Gradient_5ptjf")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xll58"]
emission_shape = 3
emission_box_extents = Vector3(35, 4, 0)
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_max = 10.0
angular_velocity_min = -10.0
angular_velocity_max = 10.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_min = 1.0
damping_max = 1.0
angle_max = 360.0
scale_curve = SubResource("CurveTexture_1g5gc")
color_ramp = SubResource("GradientTexture1D_aeyvo")

[node name="Ship" type="RigidBody2D" groups=["ships"]]
max_contacts_reported = 4
contact_monitor = true
linear_damp = 2.0
angular_damp = 10.0
script = ExtResource("1_lvdat")
speed = 200.0
min_speed = 50.0
rotation_speed = 3000.0
ram_dps_min = 0.1
ram_dps_max = 0.2
obstacle_dps = 0.15
max_health = 1.0
cannon_count = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
unique_name_in_owner = true
polygon = PackedVector2Array(-18, -8, 15, -7, 33, 0, 42, 1, 33, 2, 16, 9, -18, 9, -40, 6, -40, -5)

[node name="ShipSprite" parent="." instance=ExtResource("2_casu2")]
unique_name_in_owner = true

[node name="ControlParent" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="HealthBar" type="ProgressBar" parent="ControlParent"]
unique_name_in_owner = true
offset_left = -32.0
offset_top = 24.0
offset_right = 32.0
offset_bottom = 32.0
theme_override_styles/background = SubResource("StyleBoxFlat_3u3v2")
theme_override_styles/fill = SubResource("StyleBoxFlat_5848p")
max_value = 1.0
value = 1.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="NicknameLabel" type="Label" parent="ControlParent"]
unique_name_in_owner = true
z_index = 3
offset_left = -84.0
offset_top = -59.0
offset_right = 85.0
offset_bottom = -33.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "WWWWWWWWWW"
horizontal_alignment = 1

[node name="LeftCannons" parent="." instance=ExtResource("4_dkwe4")]
unique_name_in_owner = true
position = Vector2(-3, -8)
rotation = -1.5708

[node name="RightCannons" parent="." instance=ExtResource("4_dkwe4")]
unique_name_in_owner = true
position = Vector2(-3, 8)
rotation = 1.5708

[node name="DamageSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_mi6ka")
bus = &"Sound"

[node name="WakeParticles" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
z_index = -3
amount = 24
process_material = SubResource("ParticleProcessMaterial_ae3ss")
texture = ExtResource("11_yy8k2")
lifetime = 3.0

[node name="MediumHealthParticles" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
z_index = 1
emitting = false
amount = 32
process_material = SubResource("ParticleProcessMaterial_8xlol")
texture = ExtResource("12_vokgj")
lifetime = 4.0
draw_order = 2

[node name="LowHealthParticles" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
z_index = 1
emitting = false
amount = 32
process_material = SubResource("ParticleProcessMaterial_xll58")
texture = ExtResource("12_vokgj")
lifetime = 4.0
draw_order = 2

[node name="DamageTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true
